# winzy-head-tail

./: README.md  pyproject.toml
tests/: test_winzy_head_tail.py
winzy_head_tail/: __init__.py  head.py  tail.py
