[project]
name = "winzy-head-tail"
version = "0.0.1"
description = "Mimics head and tail command using python"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-head-tail"
Changelog = "https://github.com/sukhbinder/winzy-head-tail/releases"
Issues = "https://github.com/sukhbinder/winzy-head-tail/issues"
CI = "https://github.com/sukhbinder/winzy-head-tail/actions"

[project.entry-points."winzy.plugins"]
head = "winzy_head_tail:head_plugin"
tail = "winzy_head_tail:tail_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
